2010-07-10  David Reveman  <davidr@novell.com>

	* uielement.cpp: Use effect_padding.

	* frameworkelement.cpp:
	* uielement.cpp: No need to check UIElement::RENDER_PROJECTION
	flag when computing bounds.

	* frameworkelement.cpp:
	* uielement.cpp:
	* rect.cpp:
	* rect.h: Add Rect::Transform (double *projection).

	* frameworkelement.cpp (ComputeGlobalBounds):
	* uielement.cpp:
	* uielement.h: Add effect_padding to UIElement class.

	* frameworkelement.cpp:
	* uielement.cpp:
	* effect.cpp:
	* effect.h: Replace Effect::TransformBounds with Effect::Padding.

	* uielement.cpp (ComputeSurfaceBounds):
	* frameworkelement.cpp (ComputeSurfaceBounds): Ignore ancestor
	element effects when computing surface bounds.

	* uielement.cpp (TransformBounds): Update surface and global
	bounds after call to ShiftPosition.

	* textblock.cpp (ComputeBounds):
	* stylus.cpp (ComputeBounds):
	* shape.cpp (ComputeBounds, TransformBounds):
	* panel.cpp (ComputeBounds):
	* grid.cpp (ComputeBounds):
	* glyphs.cpp (ComputeBounds):
	* frameworkelement.cpp (ComputeBounds):
	* canvas.cpp (ComputeBounds):
	* dirty.cpp (ProcessUpDirtyElements): Make it the responsibility of
	ComputeBounds to compute global and surface bounds.

	* frameworkelement.cpp (ComputeGlobalBounds, ComputeSurfaceBounds):
	Don't use GetEffect directly. Use GetRenderEffect instead.

2010-07-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* media.cpp|h: Image: Detach from any events we may be listening for on the
	bitmap source when disposed. Fixes a number of crashes when we'd get
	downloader events after the image was destructed, but not the bitmap source.

2010-07-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* media.cpp|h: Remove unused methods.

2010-07-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* debug.cpp: Add an env var to sleep for eternity after a crash, to make it
	easier to attach gdb.

2010-07-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>
